[package]
name = "hellsgate"
version = "0.1.0"
edition = "2024"

[dependencies]
widestring = "1.2.1"
windows-core = "0.56.0"
windows = { version = "0.56.0", features = [ "Win32_System_Threading", "Win32_Security", "Win32_System_LibraryLoader", "Win32_System_Diagnostics", "Win32_System_Diagnostics_Debug", "Win32_System_Kernel", "Win32_System_WindowsProgramming", "Win32_System_SystemServices", "Win32_System_SystemInformation", "Win32_Storage", "Win32_Storage_FileSystem" ] }

[build-dependencies]
cc = "1.0"