[package]
name = "hellsgate"
version = "0.1.0"
edition = "2024"

[features]
default = ["win32", "wdk"]
win32 = [
    "windows/Win32_System_Threading",
    "windows/Win32_Security",
    "windows/Win32_System_LibraryLoader",
    "windows/Win32_System_Diagnostics",
    "windows/Win32_System_Diagnostics_Debug",
    "windows/Win32_System_Kernel",
    "windows/Win32_System_WindowsProgramming",
    "windows/Win32_System_SystemServices",
    "windows/Win32_System_SystemInformation",
    "windows/Win32_System_IO",
    "windows/Win32_Storage",
    "windows/Win32_Storage_FileSystem"]
wdk = ["windows/Wdk"]

[dependencies]
widestring = "1.2.1"
windows-core = "0.56.0"
winapi = { version = "0.3.9", features = ["ntdef"] }
windows = { version = "0.56.0", features = [
    "Win32_System_Threading",
    "Win32_Security",
    "Win32_System_LibraryLoader",
    "Win32_System_Diagnostics",
    "Win32_System_Diagnostics_Debug",
    "Win32_System_Kernel",
    "Win32_System_WindowsProgramming",
    "Win32_System_SystemServices",
    "Win32_System_SystemInformation",
    "Win32_System_IO",
    "Win32_Storage",
    "Win32_Storage_FileSystem",
    "Wdk", "Wdk_Foundation" ] }

[build-dependencies]
cc = "1.0"